[package]
name = "insilico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "InSilicoPCR"
path = "src/lib.rs"

[dependencies]
rocket-governor = { path = "src/rocket_governor" }
aead = { version = "0.5.2", features = ["getrandom"] }
chacha20poly1305 = { version = "0.9.0", features = ["stream", "heapless"] }
anyhow = "1.0.75"
sha256 = "1.4.0"
rand = "0.8"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
serde = {version="1.0", features=["derive"]}
futures = "0.3.28"
rocket = "0.5.0-rc.3"
shuttle-rocket = { version = "0.34.0" }
clap = { version = "4.3.21", features = ["derive"] }
shuttle-runtime = "0.34.0"
bio="0.38.0"
regex="1.5"
