[package]
name = "rocket-governor"
version = "0.5.0-rc.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "in_silico_pcr_rocket_governor"
path = "lib.rs"

[dependencies]
governor = "0.4"
rocket = "0.5.0-rc.2"
lazy_static = "1.4"
